<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/Title_CCID"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#cdcdcd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/create_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/create"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="0.8dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:background="#cdcdcd" />

        <TextView
            android:id="@+id/statistics_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/statistics"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>
