<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Go_back"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:scaleType="center"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/select_mood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignContent="center"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"></com.google.android.flexbox.FlexboxLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            tools:text="2018-09-29" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            tools:text="15:26:06" />


    </LinearLayout>


    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="#f5f5f5"
        android:gravity="left|top"
        android:hint="@string/add_emotion_hint_2"
        android:lineSpacingMultiplier="1.3"
        android:maxLength="100"
        android:minHeight="100dp"
        android:padding="3dp" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/confirm"
        android:textAllCaps="false" />

</LinearLayout>